# cpphandler

./: CMakeLists.txt  Handler.h  README.md  TestCallbackFunction.cpp  TestCallbackFunctor.cpp  TestCallbackLambda.cpp  TestRemove.cpp
